--- a/backend/auth-service/src/main/resources/application.yml
+++ b/backend/auth-service/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+   application:
+    name: auth-service
    datasource:
     url: jdbc:mysql://localhost:3306/ecommerce
     username: root
