--- a/backend/product-service/pom.xml
+++ b/backend/product-service/pom.xml
@@ -30,6 +30,12 @@
 		<java.version>22</java.version>
 	</properties>
 <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
         <!-- Spring Boot Starter Web -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -48,6 +54,8 @@
             <artifactId>mysql-connector-j</artifactId>
             <scope>runtime</scope>
         </dependency>
+        
+
 
         <!-- Spring Boot Starter Validation -->
         <dependency>
@@ -104,7 +112,16 @@
     <artifactId>mapstruct-processor</artifactId>
     <version>1.6.2</version>
 </dependency>
-
+<dependency>
+    <groupId>org.springframework.cloud</groupId>
+    <artifactId>spring-cloud-starter-openfeign</artifactId>
+    <version>4.1.3</version>
+</dependency>
+<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>4.1.3</version>
+		</dependency>
     </dependencies>
 	
 
