--- a/backend/product-service/src/main/resources/application.yml
+++ b/backend/product-service/src/main/resources/application.yml
@@ -8,6 +8,9 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+
+   application:
+    name: product-service
  
 server:
   port: 8082
