--- a/backend/shopping-cart-service/pom.xml
+++ b/backend/shopping-cart-service/pom.xml
@@ -83,9 +83,20 @@
 		</dependency>
 		<dependency>
     <groupId>com.mysql</groupId>
-    <artifactId>mysql-connector-j</artifactId>
-    <version>8.0.33</version> <!-- Use a version compatible with your Java setup -->
+    <artifactId>mysql-connector-j</artifactId> <!-- Use a version compatible with your Java setup -->
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-openfeign -->
+<dependency>
+    <groupId>org.springframework.cloud</groupId>
+    <artifactId>spring-cloud-starter-openfeign</artifactId>
+    <version>4.1.3</version>
+</dependency>
+<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>4.1.3</version>
+		</dependency>
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
